--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "init": "^0.1.2",
     "mongod": "^1.3.0",
     "mongoose": "^4.5.5",
+    "node": "0.0.0",
     "npm": "^3.10.5"
   },
   "devDependencies": {},
