--- a/package.json
+++ b/package.json
@@ -6,12 +6,17 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "bower": "^1.7.9",
+    "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
+    "express-session": "^1.14.0",
     "init": "^0.1.2",
     "mongod": "^1.3.0",
     "mongoose": "^4.5.5",
     "node": "0.0.0",
-    "npm": "^3.10.5"
+    "npm": "^3.10.5",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^4.0.0"
   },
   "devDependencies": {},
   "scripts": {
