--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
     "express-session": "^1.14.0",
+    "hbs": "^4.0.0",
     "init": "^0.1.2",
     "mongod": "^1.3.0",
     "mongoose": "^4.5.5",
